# hcl

./: Cargo.toml  README.md  build.rs
examples/: string_encrypt.rs
src/: lib.rs  tests.rs
